WIP: pkp/pkp-lib#7014 DOI refactor
WIP: pkp/pkp-lib#6062 DOI refactor

WIP: Implement deposit error and registration message in abstract way
[a6d7dd5] WIP: Implement Crossref registration with EntityDAO-based DOI
[93f5023] WIP: Implement markRegistered functionality
[4ff3e25] WIP: Integrate EntityDAO-based DOI filtering in UI
[269ee5d] WIP: Integrate EntityDAO-based DOIs into UI and remove Crossref specific references
[19f6233] Move DOI management out of plugin
Add DOI settings to context via workflow
[804c2ff] Update to work with Services replacement
[4e22f9f] Apply code formatting and updates to use DOI API endpoints
[daeb584] Add beginnings of DOI API endpoints and centralized depositing management
[291f85d] Remove Crossref specific DOI management tasks to CrossrefPlugin
[041b997] Fix typos
[aa00967] Update CrossrefSettingsForm to work always work with CrossrefExportPlugin
[30ada49] Refactor for namespaces/constants
[c60f962] Add missing use statement
[3f9fe02] Add implementation of importexport abstract methods
[f764883] pkp/pkp-lib#6062 Convert to generic plugin

Enable DOIs for Issues
Make DOI interaction generic at pkp-lib level for reuse
WIP: Move DOI functionality out of plugins
WIP: Move more DOI functionality out of plugins
Add in route-based export and mark registered for submissions and issues
Add issue and submission depositing flow + Crossref implementation
Remove old deposit/export code
Update API flow for export actions between backend and UI
Simplify IDoiRegistrationAgency interface
WIP: More code review refactoring
WIP: Code review changes
Setup Crossref plugin configuration checks
Update string localization
WIP: Add deposit all via queued jobs
DOI registration agency enabling work
WIP: Refactor to enable Datacite functionality
Add TemporaryFile-based DOI XML export downloads
Disallow deposits/exports for unpublished items
Wrap up first round code review changes

--- a/locale/el_GR/locale.po
+++ b/locale/el_GR/locale.po
@@ -11,11 +11,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
+#,fuzzy
 msgid "plugins.importexport.crossref.description"
-msgstr "Εξαγωγή των μεταδεδομένων του άρθρου σε μορφή CrossRef XML."
+msgstr "Εξαγωγή των μεταδεδομένων του άρθρου σε μορφή Crossref XML."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Πρόσθετο εξαγωγής CrossRef XML"
+msgstr "Πρόσθετο εξαγωγής Crossref XML"
 
 msgid "plugins.importexport.crossref.requirements.satisfied"
 msgstr "Πληρούνται όλες οι απαιτήσεις των πρόσθετων."
