--- a/locale/pt_PT/locale.po
+++ b/locale/pt_PT/locale.po
@@ -14,11 +14,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Weblate 3.9.1\n"
 
+#,fuzzy
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Plugin de Exportação CrossRef XML"
+msgstr "Plugin de Exportação Crossref XML"
 
+#,fuzzy
 msgid "plugins.importexport.crossref.description"
-msgstr "Exporta metadados dos artigos no formato CrossRef XML."
+msgstr "Exporta metadados dos artigos no formato Crossref XML."
 
 msgid "plugins.importexport.crossref.cliUsage"
 msgstr ""
@@ -37,9 +39,10 @@ msgstr "Requisitos"
 msgid "plugins.importexport.crossref.requirements.satisfied"
 msgstr "Todos os requisitos do plugin foram satisfeitos."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.settings.depositorIntro"
 msgstr ""
-"Os seguintes itens são necessários para um depósito bem sucedido na CrossRef."
+"Os seguintes itens são necessários para um depósito bem sucedido na Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.depositorName"
 msgstr "Nome do Depositante"
@@ -53,11 +56,13 @@ msgstr "Insira o nome do depositante."
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Insira o e-mail do depositante."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
-msgstr "Insira o nome de utilizador da sua conta na CrossRef."
+msgstr "Insira o nome de utilizador da sua conta na Crossref."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Tarefa de registo automático CrossRef"
+msgstr "Tarefa de registo automático Crossref"
 
 msgid "plugins.importexport.crossref.error.publisherNotConfigured"
 msgstr ""
@@ -74,22 +79,25 @@ msgstr ""
 "identificador público DOI, portanto, não há possibilidade de depósito ou "
 "exportação através deste plugin."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
-"Se quiser usar este plugin para registar DOIs diretamente na CrossRef, tem "
+"Se quiser usar este plugin para registar DOIs diretamente na Crossref, tem "
 "de possuir um nome de utilizador e senha (disponível em <a href=\""
-"http://www.crossref.org\" target=\"_blank\"> CrossRef </a>) para poder fazê-"
+"http://www.crossref.org\" target=\"_blank\"> Crossref </a>) para poder fazê-"
 "lo. Se não tem nome de utilizador e senha, pode exportar para o formato "
-"CrossRef XML, mas não pode registar os seus DOIs na CrossRef através do OJS."
+"Crossref XML, mas não pode registar os seus DOIs na Crossref através do OJS."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"O OJS depositará DOIs atribuídos automaticamente na CrossRef. Esta ação pode "
+"O OJS depositará DOIs atribuídos automaticamente na Crossref. Esta ação pode "
 "demorar algum tempo a processar. Pode verificar todos os DOIs não registados."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Use a API de teste CrossRef (ambiente de teste) para o depósito de DOI. Não "
+"Use a API de teste Crossref (ambiente de teste) para o depósito de DOI. Não "
 "se esqueça de remover esta opção para a produção."
 
 msgid "plugins.importexport.crossref.issues.description"
