--- a/locale/ro_RO/locale.po
+++ b/locale/ro_RO/locale.po
@@ -36,19 +36,19 @@ msgstr ""
 
 msgid "plugins.importexport.crossref.settings.form.testMode.description"
 msgstr ""
-"Utilizați API-ul de testare CrossRef (mediu de testare) pentru depunerea "
+"Utilizați API-ul de testare Crossref (mediu de testare) pentru depunerea "
 "DOI. Vă rugăm să nu uitați să eliminați această opțiune pentru producție."
 
 msgid "plugins.importexport.crossref.settings.form.automaticRegistration.description"
 msgstr ""
-"OJS va depune DOI alocate automat la CrossRef. Vă rugăm să rețineți că este "
+"OJS va depune DOI alocate automat la Crossref. Vă rugăm să rețineți că este "
 "posibil să dureze un timp scurt după publicare (de exemplu, în funcție de "
 "configurația cronjob). Puteți verifica toate DOI-urile neînregistrate."
 
 msgid "plugins.importexport.crossref.settings.form.usernameRequired"
 msgstr ""
 "Vă rugăm să introduceți numele de utilizator pe care l-ați primit de la "
-"CrossRef."
+"Crossref."
 
 msgid "plugins.importexport.crossref.settings.form.username"
 msgstr "Nume de utilizator"
@@ -56,11 +56,11 @@ msgstr "Nume de utilizator"
 msgid "plugins.importexport.crossref.registrationIntro"
 msgstr ""
 "Dacă doriți să utilizați acest plugin pentru a înregistra identificatorii de "
-"obiecte digitale (DOI) direct cu CrossRef, veți avea nevoie de un nume de "
+"obiecte digitale (DOI) direct cu Crossref, veți avea nevoie de un nume de "
 "utilizator și o parolă (disponibile la <a href=\"http://www.crossref.org\" "
-"target=\"_blank\">CrossRef</a>). Dacă nu aveți propriul nume de utilizator "
-"și parolă, puteți să exportați în formatul XML CrossRef, dar nu puteți "
-"înregistra DOI-urile dvs. cu CrossRef din OJS."
+"target=\"_blank\">Crossref</a>). Dacă nu aveți propriul nume de utilizator "
+"și parolă, puteți să exportați în formatul XML Crossref, dar nu puteți "
+"înregistra DOI-urile dvs. cu Crossref din OJS."
 
 msgid "plugins.importexport.crossref.settings.form.depositorEmailRequired"
 msgstr "Vă rog să introduceți emailul depozitarului."
@@ -76,7 +76,7 @@ msgstr "Numele depozitarului"
 
 msgid "plugins.importexport.crossref.settings.depositorIntro"
 msgstr ""
-"Următoarele elemente sunt necesare pentru un depozit CrossRef de succes."
+"Următoarele elemente sunt necesare pentru un depozit Crossref de succes."
 
 msgid "plugins.importexport.crossref.error.noDOIContentObjects"
 msgstr ""
@@ -102,11 +102,13 @@ msgstr "Toate cerințele pluginului sunt satisfăcute."
 msgid "plugins.importexport.crossref.requirements"
 msgstr "Cerințe"
 
+#,fuzzy
 msgid "plugins.importexport.crossref.description"
-msgstr "Exportare metadate articole în formatul XML pentru CrossRef."
+msgstr "Exportare metadate articole în formatul XML pentru Crossref."
 
+#,fuzzy
 msgid "plugins.importexport.crossref.displayName"
-msgstr "Plugin pentru exportul fișierelor XML necesare CrossRef"
+msgstr "Plugin pentru exportul fișierelor XML necesare Crossref"
 
 msgid "plugins.importexport.crossref.export.error.articleNotFound"
 msgstr ""
@@ -134,8 +136,9 @@ msgstr ""
 "{$scriptName} {$pluginName} înregistrare [journal_path] articole objectId1 "
 "[objectId2] ...\n"
 
+#,fuzzy
 msgid "plugins.importexport.crossref.senderTask.name"
-msgstr "Sarcină de înregistrare automată CrossRef"
+msgstr "Sarcină de înregistrare automată Crossref"
 
 msgid "plugins.importexport.crossref.action.markRegistered"
 msgstr "Marcați activ"
